manifests-prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gwaladashboard-svc
  namespace: prod
spec:
  selector:
    app: gwaladashboard
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
